fixed video/img css spacing bug

--- a/www/css/submitted.css
+++ b/www/css/submitted.css
@@ -129,9 +129,14 @@
 	margin-bottom: 10px;
 }
 
-.gallery-item img, .gallery-image video{
+.gallery-item img {
 	width: 100%;
 	height: auto;
+}
+
+.subRepeat video{
+  width: 100%;
+  height: auto;
 }
 
 
